--- a/jtree.css
+++ b/jtree.css
@@ -25,7 +25,7 @@ ul.jtree ul li:last-child { background-size : 8px 1px, 1px 8px; }
 
 ul.jtree span.item-folder-class[data-state=open] { background-image: url(/images/icons/folder_open.png); }
 ul.jtree span.item-folder-class:not([data-state=open]) { background-image: url(/images/icons/folder.png); }
-ul.jtree span.item-document-class { background-image: url(/images/icons/document.png); }
+ul.jtree span.item-doc-class { background-image: url(/images/icons/document.png); }
 
 ul.jtree span:hover {
 	color:blue;
